--- a/index.html
+++ b/index.html
@@ -1,3 +1,36 @@
+<meta charset="utf-8"><!DOCTYPE html><html lang="pt-br">
+<head><title>CALENDÁRIO DO SANTOS</title>
+<link rel="sortcut icon" href="https://em-content.zobj.net/source/microsoft-teams/363/large-yellow-circle_1f7e1.png" type="image/gif" />
+<link href="JS.js" rel="stylesheet">
+<link rel="stylesheet" href="CSS.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="author" content="santos.12164@hotmail.com">
+<meta name="description" content="CALENDÁRIO DO SANTOS">
+<meta name="keywords" content="CALENDÁRIO DO SANTOS, CALENDÁRIO, SANTOS">
+</head><body><style>
+img {
+    max-width: 100%;
+}
+</style><body bgcolor="#00fffb"></body>
+<!---------------------------------
+<body bgcolor="linen"></body>
+<body bgcolor="#d0e4fe"></body>
+<FONT COLOR="#ffffff">NOME⚫</FONT>
+&emsp;
+?autoplay=1&mute=1&enablejsapi=1
+<FONT SIZE=+4><b>NOME⚫</b></FONT>
+<b>&#9776; C A T E G O R I A S &#9776;</b>
+<!---------------------------------------------------------------------------------->
+<!---------------------------------
+
+------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!--####################################  INÍCIO  ################################-->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!---------------------------------------------------------------------------------->
 <!------------------------------------------------------------------>
 <center>
 <!------------RELOGIO NOVO RELÓGIO BOM--------------->
