--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ document.write('  '+todaysDate);
   <div id="container">
       <div id="header">
         <div id="monthDisplay"></div>
-        <div>
+        <div><BR/>
           <button id="backButton">Voltar</button>
           <button id="nextButton">Próximo</button>
         </div>
