--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ img {
 <!---------------------------------------------------------------------------------->
 <!------------------------------------------------------------------>
 <center>
-<!------------RELOGIO NOVO RELÓGIO BOM--------------->
+<!------------RELOGIO NOVO RELÓGIO BOM---
 <hr/><u><html><head><title></title></head><body><SCRIPT LANGUAGE="JAVASCRIPT">
 <!--
 var now = new Date();
@@ -65,7 +65,7 @@ else {Year = yearNr;}
 var todaysDate =(" " + Day + ", " + dayNr + "/" + Month + "/" + Year);
 document.write('  '+todaysDate);
 //-->
-</SCRIPT><b> | <mark>
+</SCRIPT><b> | <mark><!---------------------------------
 <SPAN ID="Clock">00:00:00</SPAN>
 <SCRIPT LANGUAGE="JavaScript">
 <!--
