--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ else {Year = yearNr;}
 var todaysDate =(" " + Day + ", " + dayNr + "/" + Month + "/" + Year);
 document.write('  '+todaysDate);
 //-->
-</SCRIPT><b> | <mark><!---------------------------------
+</SCRIPT><b> <!---------------------------------| <mark><!---------------------------------
 <SPAN ID="Clock">00:00:00</SPAN>
 <SCRIPT LANGUAGE="JavaScript">
 <!--
@@ -88,7 +88,7 @@ document.write('  '+todaysDate);
     } 
     window.setInterval("Horario()",1000);
 //-->
-</SCRIPT></body></html></b></mark></u><HR/>
+</SCRIPT></body></html></b></mark></u><!---------------------------------<HR/>
 <!--------------------------------------------------------------->
 <!--##############################################################################-->
 <!--##############################################################################-->
