--- a/index.html
+++ b/index.html
@@ -1,46 +1,78 @@
-<meta charset="utf-8"><!DOCTYPE html><html lang="pt-br">
-<head><title>CALENDÁRIO DO SANTOS</title>
-<link rel="sortcut icon" href="https://em-content.zobj.net/source/microsoft-teams/363/large-yellow-circle_1f7e1.png" type="image/gif" />
-<!---------------------------------
-<link href="JS.js" rel="stylesheet">
-<link rel="stylesheet" href="CSS.css">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="author" content="santos.12164@hotmail.com">
-<meta name="description" content="CALENDÁRIO DO SANTOS">
-<meta name="keywords" content="CALENDÁRIO DO SANTOS, CALENDÁRIO, SANTOS">
-</head><body><style>
-img {
-    max-width: 100%;
-}
-</style><body bgcolor="#00fffb"></body>
-<!---------------------------------
-<body bgcolor="linen"></body>
-<body bgcolor="#d0e4fe"></body>
-<FONT COLOR="#ffffff">NOME⚫</FONT>
-&emsp;
-?autoplay=1&mute=1&enablejsapi=1
-<FONT SIZE=+4><b>NOME⚫</b></FONT>
-<b>&#9776; C A T E G O R I A S &#9776;</b>
-<!---------------------------------------------------------------------------------->
-<!---------------------------------
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-------------------------------------->
-<!---------------------------------------------------------------------------------->
-<!--##############################################################################-->
-<!--##############################################################################-->
-<!--####################################  INÍCIO  ################################-->
-<!--##############################################################################-->
-<!--##############################################################################-->
-<!---------------------------------------------------------------------------------->
+  <!-- arquivos style -->
+  <link href="./css/style.css" rel="stylesheet">
+  <link href="./css/darkMode.css" rel="stylesheet">
 
-<!----------------------------------------------------------->
-<P><li><a target="_blank" href="
-https://jbmsantos0398.github.io/Calendario/
-">
-O LINK MUDOU, AGORA E ESSE (Clique aqui)
-</a></li></P>
-<!----------------------------------------------------------->
+  <title>Calendario</title>
+</head>
+  <!-- dark mode -->
+  
+  <div class="toggle">
+    <input id="switch" type="checkbox" name="theme">
+    <label for="switch">Toggle</label>
+  </div>
+
+<!-- -------- -->
+
+<body>
+  <div id="container">
+      <div id="header">
+        <div id="monthDisplay"></div>
+
+        <div>
+          <button id="backButton">Voltar</button>
+          <button id="nextButton">Próximo</button>
+        </div>
+          
+      </div>
+
+      <div id="weekdays">
+        <div>Domingo</div>
+        <div>Segunda-feira</div>
+        <div>Terça-feira</div>
+        <div>Quarta-feira</div>
+        <div>Quinta-feira</div>
+        <div>Sexta-feira</div>
+        <div>Sábado</div>
+      </div>
 
 
-<!-------------------------------------------------------------->
-</center></HR>
+      <!-- div dinamic -->
+      <div id="calendar" ></div>
+
+   
+  </div>
+
+  <div id="newEventModal">
+    <h2>New Evente</h2>
+
+    <input id="eventTitleInput" placeholder="Event Title"/>
+
+    <button id="saveButton"> Salvar</button>
+    <button id="cancelButton">Cancelar</button>
+  </div>
+
+  <div id="deleteEventModal">
+    <h2>Evento</h2>
+
+    <div id="eventText"></div><br>
+
+
+    <button id="deleteButton">Deletar</button>
+    <button id="closeButton">Fechar</button>
+  </div>
+
+  <div id="modalBackDrop"></div>
+
+
+  <script src="scripts/darkMode.js"></script>
+  <script src="./scripts/main.js"></script>
+  
+</body>
+</html>
