--- a/index.html
+++ b/index.html
@@ -1,78 +1,235 @@
-<!DOCTYPE html>
-<html lang="pt">
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="utf-8"><!DOCTYPE html><html lang="pt-br">
+<head><title>NOVO SITE LINK 28-02-24</title>
+<link rel="sortcut icon" href="https://play-lh.googleusercontent.com/Eg2J_wqPzi774STTViPADmIpLt1RDNnUBJpnQDiIqw7NiNWBnsIB7knRIBJOVXJzbsY" type="image/gif" />
+<link href="CSS🔴.css" rel="stylesheet">
+<link rel="stylesheet" href="CSS🔴.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="author" content="santos.12164@hotmail.com">
+<meta name="description" content="NOVO SITE LINK 28-02-24">
+<meta name="keywords" content="NOVO SITE LINK 28-02-24">
+</head><body><style>
+img {
+    max-width: 100%;
+}
+<!----------------------------------------------------------->
+a:link{
+text-decoration:none;
+color:black;
+}
+a:visited{
+text-decoration:none;
+color:red;
+}
+a:hover{
+text-decoration:none;
+color:#01DF01;
+}
+a:active{
+text-decoration:none;
+color:green;
+}
+</style>
+<!---------------------------------
+<body bgcolor="linen"></body>
+<body bgcolor="#d0e4fe"></body>
+<FONT COLOR="#ffffff">NOME⚫</FONT>
+&emsp;
+?autoplay=1&mute=1&enablejsapi=1
+<FONT SIZE=+4><b>NOME⚫</b></FONT>
+<b>&#9776; C A T E G O R I A S &#9776;</b>
 
-  <!-- arquivos style -->
-  <link href="./css/style.css" rel="stylesheet">
-  <link href="./css/darkMode.css" rel="stylesheet">
+<!------------------------------------------------------>
+<!---------------------------------------------------------------------------------->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!--####################################  INÍCIO  ################################-->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!---------------------------------------------------------------------------------->
+<!DOCTYPE html><html><head>
+<meta name="viewport" content="width=device-width, initial-scale=1"><style>
+body {margin:0;}
+.navbar {
+  overflow: hidden;
+  background-color: #000000;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+.navbar a {
+  float: center;
+  display: block;
+  color: #ffffff;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 22px;
+}
+.navbar a:hover {
+  background: #00ff08;
+  color: black;
+}
+.main {
+  padding: 0px;
+  margin-top: 60px;
+  height: 500px; /* Used in this example to enable scrolling */
+}
+</style></head><body><div class="navbar">
 
-  <title>Calendario</title>
-</head>
-  <!-- dark mode -->
-  
-  <div class="toggle">
-    <input id="switch" type="checkbox" name="theme">
-    <label for="switch">Toggle</label>
-  </div>
+<a href="index.html">INÍCIO</a>
 
-<!-- -------- -->
+</div><div class="main">
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!--##############################################################################-->
+<!---------------------------------------------------------------------------------->
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<FONT SIZE=+4><b><center><X class="font-effect-emboss">
+SANTOS
+</X></center></b></FONT>
+<!---------------------------------------------------------------------------------->
+<FONT SIZE=+2><b><center><X class="font-effect-emboss">
+BEM VINDOS
+</X></center></b></FONT>
+<!---------------------------------------------------------------------------------->
+<center><X class="font-effect-emboss">
+Deus seja louvado
+</X></center>
 
-<body>
-  <div id="container">
-      <div id="header">
-        <div id="monthDisplay"></div>
-
-        <div>
-          <button id="backButton">Voltar</button>
-          <button id="nextButton">Próximo</button>
-        </div>
-          
-      </div>
-
-      <div id="weekdays">
-        <div>Domingo</div>
-        <div>Segunda-feira</div>
-        <div>Terça-feira</div>
-        <div>Quarta-feira</div>
-        <div>Quinta-feira</div>
-        <div>Sexta-feira</div>
-        <div>Sábado</div>
-      </div>
-
-
-      <!-- div dinamic -->
-      <div id="calendar" ></div>
-
-   
-  </div>
-
-  <div id="newEventModal">
-    <h2>New Evente</h2>
-
-    <input id="eventTitleInput" placeholder="Event Title"/>
-
-    <button id="saveButton"> Salvar</button>
-    <button id="cancelButton">Cancelar</button>
-  </div>
-
-  <div id="deleteEventModal">
-    <h2>Evento</h2>
-
-    <div id="eventText"></div><br>
-
-
-    <button id="deleteButton">Deletar</button>
-    <button id="closeButton">Fechar</button>
-  </div>
-
-  <div id="modalBackDrop"></div>
-
-
-  <script src="scripts/darkMode.js"></script>
-  <script src="./scripts/main.js"></script>
-  
-</body>
-</html>
+<!-----------------------RELOGIO NOVO RELÓGIO BOM-------SEM MARK----------------->
+<!------------------------------------------------------------------>
+<center>
+<!------------RELOGIO NOVO RELÓGIO BOM--------------->
+<hr/><u><html><head><title></title></head><body><SCRIPT LANGUAGE="JAVASCRIPT">
+<!--
+var now = new Date();
+var mName = now.getMonth() +1 ;
+var dName = now.getDay() +1;
+var dayNr = now.getDate();
+var yearNr=now.getYear();
+if(dName==1) {Day = "Domingo";}
+if(dName==2) {Day = "Segunda-feira";}
+if(dName==3) {Day = "Terça-feira";}
+if(dName==4) {Day = "Quarta-feira";}
+if(dName==5) {Day = "Quinta-feira";}
+if(dName==6) {Day = "Sexta-feira";}
+if(dName==7) {Day = "Sábado";}
+if(mName==1){Month = "Janeiro";}
+if(mName==2){Month = "Fevereiro";}
+if(mName==3){Month = "Março";}
+if(mName==4){Month = "Abril";}
+if(mName==5){Month = "Maio";}
+if(mName==6){Month = "Junho";}
+if(mName==7){Month = "Julho";}
+if(mName==8){Month = "Agosto";}
+if(mName==9){Month = "Setembro";}
+if(mName==10){Month = "Outubro";}
+if(mName==11){Month = "Novembro";}
+if(mName==12){Month = "Dezembro";}
+if(yearNr < 2000) {Year = 1900 + yearNr;}
+else {Year = yearNr;}
+var todaysDate =(" " + Day + ", " + dayNr + "/" + Month + "/" + Year);
+document.write('  '+todaysDate);
+//-->
+</SCRIPT><b> | <mark>
+<SPAN ID="Clock">00:00:00</SPAN>
+<SCRIPT LANGUAGE="JavaScript">
+<!--
+  var Elem = document.getElementById("Clock");
+  function Horario(){ 
+    var Hoje = new Date(); 
+    var Horas = Hoje.getHours(); 
+    if(Horas < 10){ 
+      Horas = "0"+Horas; 
+    } 
+    var Minutos = Hoje.getMinutes(); 
+    if(Minutos < 10){ 
+      Minutos = "0"+Minutos; 
+    } 
+    var Segundos = Hoje.getSeconds(); 
+    if(Segundos < 10){ 
+      Segundos = "0"+Segundos; 
+    } 
+    Elem.innerHTML = Horas+":"+Minutos+":"+Segundos; 
+    } 
+    window.setInterval("Horario()",1000);
+//-->
+</SCRIPT></body></html></b></mark></u><HR/>
+<!--------------------------------------------------------------->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!----------------------------------------------------------->
+<SCRIPT LANGUAGE="JavaScript">
+<!-- Begin
+var day_of_week = new Array('<FONT COLOR="#FF0000">DOM</FONT>','Seg','Ter','Qua','Qui','Sex','<FONT COLOR="#0101DF">Sab</FONT>');
+var month_of_year = new Array('Janeiro','Fevereiro','Março','Abril','Maio','Junho','Julho','Agosto','Setembro','Outubro','Novembro','Dezembro');
+var Calendar = new Date();
+var year = Calendar.getYear();       // Retorna o ano
+var month = Calendar.getMonth();    // Retorna mes (0-11)
+var today = Calendar.getDate();     // Retorna dias (1-31)
+var weekday = Calendar.getDay();   // Retorna dias (1-31)
+var DAYS_OF_WEEK = 7;    // "constant" para o numero de dias na semana
+var DAYS_OF_MONTH = 31;    // "constant" para o numero de dias no mes
+var cal;    // Usado para imprimir na tela
+Calendar.setDate(1);    // Comecar o calendario no dia '1'
+Calendar.setMonth(month);    // Comecar o calendario com o mes atual
+var TR_start = '<TR>';
+var TR_end = '</TR>';
+var highlight_start = '<TD WIDTH="30"><TABLE CELLSPACING=0 BORDER=5 BGCOLOR=#40FF00 BORDERCOLOR=#FFFF00><TR><TD WIDTH=20><B><CENTER>';
+var highlight_end   = '</CENTER></TD></TR></TABLE></B>';
+var TD_start = '<TD WIDTH="30"><CENTER>';
+var TD_end = '</CENTER></TD>';
+cal =  '<TABLE BORDER=5 CELLSPACING=0 CELLPADDING=0 BORDERCOLOR=#FF00FF><TR><TD>';
+cal += '<TABLE BORDER=4 CELLSPACING=0 CELLPADDING=2>' + TR_start;
+cal += '<TD COLSPAN="' + DAYS_OF_WEEK + '" BGCOLOR="#2E64FE"><CENTER><B>';
+cal += month_of_year[month]  + '   ' + year + '</B>' + TD_end + TR_end;
+cal += TR_start;
+for(index=0; index < DAYS_OF_WEEK; index++)
+{
+if(weekday == index)
+cal += TD_start + '<B>' + day_of_week[index] + '</B>' + TD_end;
+else
+cal += TD_start + day_of_week[index] + TD_end;
+}
+cal += TD_end + TR_end;
+cal += TR_start;
+for(index=0; index < Calendar.getDay(); index++)
+cal += TD_start + '  ' + TD_end;
+for(index=0; index < DAYS_OF_MONTH; index++)
+{
+if( Calendar.getDate() > index )
+{
+  week_day =Calendar.getDay();
+  if(week_day == 0)
+  cal += TR_start;
+  if(week_day != DAYS_OF_WEEK)
+  {
+  var day  = Calendar.getDate();
+  if( today==Calendar.getDate() )
+  cal += highlight_start + day + highlight_end + TD_end;
+  else
+  cal += TD_start + day + TD_end;
+  }
+  if(week_day == DAYS_OF_WEEK)
+  cal += TR_end;
+  }
+  Calendar.setDate(Calendar.getDate()+1);
+}
+cal += '</TD></TR></TABLE></TABLE>';
+//  MOSTRAR CALENDARIO
+document.write(cal);
+//  End -->
+</SCRIPT>
+<!-------------------------------------------------------------->
+</center></center>
+<!---------------------FAIXA AZUL-- _blank --- _self -----
+<a href="../../index.html" target="_self">
+<div height="100" style="background-color: blue;line-height: 50px;text-align: center;"><p style="color: white"><FONT SIZE=+2>INÍCIO</FONT></p></div></a>
+<!---------------------------------------------------------------------------------->
