--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@ document.write('  '+todaysDate);
     window.setInterval("Horario()",1000);
 //-->
 </SCRIPT></body></html></b></mark></u><HR/>
-<!--------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
 <!--##############################################################################-->
 <!--##############################################################################-->
 <!--##############################################################################-->
 <!--##############################################################################-->
-<!----------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
 <SCRIPT LANGUAGE="JavaScript">
 <!-- Begin
 var day_of_week = new Array('<FONT COLOR="#FF0000">DOM</FONT>','Seg','Ter','Qua','Qui','Sex','<FONT COLOR="#0101DF">Sab</FONT>');
@@ -233,3 +233,35 @@ document.write(cal);
 <a href="../../index.html" target="_self">
 <div height="100" style="background-color: blue;line-height: 50px;text-align: center;"><p style="color: white"><FONT SIZE=+2>INÍCIO</FONT></p></div></a>
 <!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!---------------------------------------------------------------------------------->
+<center>Veja outros Mês<br/>Clique no quadrinho<br/>
+<!-------------------------------------------
+https://www.devmedia.com.br/novos-tipos-de-input-da-html-5/27109
+--------------------------------------->
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Exemplo Imput type = date.</title>
+</head>
+<body>
+	<input type="date">
+</body>
+</html>
+<!---------------------------------------------------------------------------------->
+<!--##############################################################################-->
+<!---------------------------------------------------------------------------------->
+
+<!---------------------------------------------------------------------------------->
+</center>
+<!---------------------------------------------------------------------------------->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!---------------------------------------------------------------------------------->
+</body></html>
