--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8"><!DOCTYPE html><html lang="pt-br">
-<head><title>SANTOS</title>
+<head><title>📅 SANTOS - CALENDÁRIO </title>
 <link rel="sortcut icon" href="https://play-lh.googleusercontent.com/Eg2J_wqPzi774STTViPADmIpLt1RDNnUBJpnQDiIqw7NiNWBnsIB7knRIBJOVXJzbsY" type="image/gif" />
 <link href="CSS🔴.css" rel="stylesheet">
 <link rel="stylesheet" href="CSS🔴.css">
