--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ a:active{
 text-decoration:none;
 color:green;
 }
-</style>
+</style><body bgcolor="#CCC"></body>
 <!---------------------------------
 <body bgcolor="linen"></body>
 <body bgcolor="#d0e4fe"></body>
@@ -243,15 +243,9 @@ document.write(cal);
 <!-------------------------------------------
 https://www.devmedia.com.br/novos-tipos-de-input-da-html-5/27109
 --------------------------------------->
-<html>
-<head>
-<meta charset="UTF-8">
+<b><head><meta charset="UTF-8">
 <title>Exemplo Imput type = date.</title>
-</head>
-<body>
-	<input type="date">
-</body>
-</html>
+</head><body><input type="date"></body></html></b><html>
 <!---------------------------------------------------------------------------------->
 <!--##############################################################################-->
 <!---------------------------------------------------------------------------------->
